syntax = "proto3";
package goshare.goshare;

import "goshare/common.proto";
import "goshare/market_data.proto";
import "goshare/instrument.proto";
import "spider/sse.proto";
option go_package = "github.com/mineralres/goshare/pkg/pb/goshare";

message ReqGetTradingInstrumentList { string exchange = 1; }
message RspGetTradingInstrumentList { repeated Instrument list = 1; }
message ReqGetTradingInstrument {
  string exchange = 1;
  string symbol   = 2;
}
message RspGetTradingInstrument {}
message ReqSetTradingInstrument { repeated Instrument list = 1; }
message RspSetTradingInstrument {}

message ReqSubscribe {
  string   exchange           = 1;
  string   symbol             = 2;
  repeated string list        = 3;
  bool            binary_data = 4;
}
message RspSubscribe {}
message ReqUnSubscribe {
  string   exchange    = 1;
  repeated string list = 2;
}
message RspUnSubscribe {}

message ReqSaveKline { KlineSeries series = 1; }
message RspSaveKline {}

message ReqCombineSubscribe {
  string   exchange               = 1;
  string   symbol                 = 2;
  repeated PeriodType period_list = 3;
}
message RspCombineSubscribe {
  string   exchange            = 1; // 交易所
  string   symbol              = 2; // 合约
  repeated KlineSeries history = 3; // 历史
  MarketDataSnapshot   tick    = 4; // 行情
  repeated Kline klines        = 5;
}

message ReqGetTickSeries {
  string exchange = 1;
  string symbol   = 2;
  int32  start    = 3;
  int32  end      = 4;
}

message RspGetTickSeries {
  string   exchange                = 1;
  string   symbol                  = 2;
  int32    start                   = 3;
  int32    end                     = 4;
  repeated MarketDataSnapshot list = 5;
}

message ReqGetKlineSeries {
  string     exchange = 1;
  string     symbol   = 2;
  PeriodType period   = 3;
  int64      start    = 4;
  int64      end      = 5;
  int64      lenLimit = 6;
}

message RspGetKlineSeries {
  string     exchange = 1;
  string     symbol   = 2;
  PeriodType period   = 3;
  int64      start    = 4;
  int64      end      = 5;
  int64      lenLimit = 6;
  repeated Kline list = 7;
}

message ReqSSEStockOptionList {}
message RspSSEStockOptionList { repeated spider.SSEStockOption list = 1; }
